<resources>
    <string name="app_name" translatable="false">MyCheckUp</string>
    <string name="income_hint">Enter your income</string>
    <string name="main_icon">Main Icon</string>
    <string name="balance_hint">Enter your POV balance</string>
    <string name="btn_go" translatable="false">Go!</string>
    <string name="Error">Data was not entered or entered incorrectly</string>
    <string name="home_menu_btn">Home</string>
    <string name="cards_menu_btn">Cards</string>
    <string name="transfer_menu_btn">Transfers</string>
    <string name="more_info">See details…</string>
    <string name="mt_hint">Enter your MT balance</string>
    <string name="res_hint">Enter your RES balance</string>
    <string name="total_title">Current balance</string>
    <string name="receive">Receive</string>
    <string name="spend">Spend</string>
    <string name="transfer">Transfer</string>
    <string name="balance_by_category">Balance by category</string>
    <string name="home">Home</string>
    <string name="add_card">Add</string>
    <string name="edit_card">Edit</string>
    <string name="budget">Budget</string>
    <string name="enter_your_spending">Enter your spending</string>
    <string name="enter_amount_of_transfer">Enter amount of transfer</string>
    <string name="yor_budget_by_category">Yor Budget by category</string>
    <string name="enter_a_label_of_card">Enter a label of Card</string>
    <string name="enter_a_start_amount">Enter a start amount</string>
    <string name="choose_currency">Choose currency</string>
    <string name="choose_category">Choose category</string>
    <string name="delete_this_card">Delete this Card</string>
    <string-array name="currency">
        <item>BYN</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>
    <string-array name="category">
        <item>Saving</item>
        <item>Reserve</item>
        <item>ServiceMT</item>
        <item>Regular</item>
    </string-array>
</resources>